--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Sandeep4ever.github.io/react-projects",
+  "homepage": "http://sandeep4ever.github.io/react-projects",
   "name": "firstreactapp",
   "version": "0.1.0",
   "private": true,
